      on platforms with cairo >= 1.6.

      \item Binary reads (e.g. by \code{readChar()} and \code{readBin()})
      are now supported on clipboard connections.  (Wish of \PR{14593}.)

      \item \code{as.POSIXlt.factor()} now passes \code{...} to the
      character method (suggestion of Joshua Ulrich).  [Intended for \R
      2.13.0 but accidentally removed before release.]
    }
  }

  \subsection{INSTALLATION}{
    \itemize{
      \item Building the vignette PDFs in packages \pkg{grid} and
      \pkg{utils} is now part of running \command{make} from an SVN
      checkout on a Unix-alike: a separate \command{make vignettes} step
      is no longer required.

      These vignettes are now made with \code{keep.source = TRUE} and
      hence will be laid out differently.

      \item \command{make install-strip} failed under some configuration
      options.

      \item Packages can customize non-standard installation of compiled
      code via a \code{src/install.libs.R} script. This allows packages that
      have architecture-specific binaries (beyond the package's shared
      objects/DLLs) to be installed in a multi-architecture setting.
    }
  }
  
  \subsection{SWEAVE & VIGNETTES}{
    \itemize{
      \item \code{Sweave()} and \code{Stangle()} gain an \code{encoding}
      argument to specify the encoding of the vignette sources if the
      latter do not contain a \samp{\\usepackage[]{inputenc}} statement
      specifying a single input encoding.

      \item There is a new Sweave option \code{figs.only = TRUE} to run
      each figure chunk only for each selected graphics device, and not
      first using the default graphics device.   This will become the
      default in \R 2.14.0.

      \item Sweave custom graphics devices can have a custom function
      \code{foo.off()} to shut them down.      

      \item Warnings are issued when non-portable filenames are found
      for graphics files (and chunks if \code{split = TRUE}).  Portable